<resources>
    <string name="app_name">MarvelApp Apresentation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_e_mail">E-mail</string>
    <string name="login_senha">senha</string>
    <string name="login_fa_a_o_seu_cadastro">Faça o seu cadastro</string>
    <string name="login_continuar">continuar</string>
    <string name="profile_crie_uma_senha">crie uma senha</string>
    <string name="profile_salvar">salvar</string>
    <string name="character_name">Name:</string>
</resources>