<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.RegisterMemberFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Cadastre seus dados"
        app:titleTextColor="@color/white"

        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:errorEnabled="true"
        android:hint="@string/login_e_mail"

        app:layout_constraintTop_toBottomOf="@id/toolbarProfile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:drawableEnd="@drawable/ic_baseline_alternate_email_24"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputProfilePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:passwordToggleEnabled="true"
        android:hint="@string/profile_crie_uma_senha"

        app:layout_constraintTop_toBottomOf="@id/inputName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editProfilePassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            app:passwordToggleEnabled="true"
            android:maxLength="8"
            android:enabled="true"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_salvar"
        android:layout_marginTop="100dp"
        android:enabled="false"
        android:background="@drawable/progress_button"

        app:layout_constraintTop_toBottomOf="@id/inputProfilePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btLoginContinue"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login_continuar"
        android:background="@drawable/button_enable"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>